--- a/front-carousel/src/main/resources/application.yaml
+++ b/front-carousel/src/main/resources/application.yaml
@@ -5,6 +5,8 @@ spring:
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/store_carousel?useSSL=false&characterEncoding=UTF-8
+  profiles:
+    active: cache
 
 mybatis-plus:
   mapper-locations: classpath:mappers/*.xml
