--- a/front-product/src/main/resources/application.yaml
+++ b/front-product/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
+  profiles:
+    active: cache  #激活store-common模块的缓存配置
 
 mybatis-plus:
   type-aliases-package: com.ahao.pojo
