--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
         <module>front-carousel</module>
         <module>front-product</module>
         <module>front-category</module>
+        <module>store-search</module>
+        <module>front-collect</module>
+        <module>front-cart</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -34,7 +37,7 @@
         <mybatis.version>2.1.1</mybatis.version>
         <druid.version>1.2.5</druid.version>
         <mybatis-plus.version>3.5.2</mybatis-plus.version>
-
+        <elasticsearch.version>7.12.1</elasticsearch.version>
     </properties>
 
 
