--- a/front-order/src/main/resources/application.yaml
+++ b/front-order/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ mybatis-plus:
     auto-mapping-behavior: full
     lazy-loading-enabled: true
     aggressive-lazy-loading: false
-  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath:com.ahao.order.mapper/*.xml
 
 ribbon:
   eager-load:
